--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pokedex",
-  "homepage": "https://gurpreet-legend.github.io/Pokedex",
+  "homepage": "https://gurpreet-legend.github.io/Pokedex--Hooks",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
