--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pokedex",
+  "name": "pokedex--hooks",
   "homepage": "https://gurpreet-legend.github.io/Pokedex--Hooks",
   "version": "0.1.0",
   "private": true,
